# fml-project

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  fix_app.py  plan.md  progress.md  pyproject.toml  replace_main.py  requirements.txt  vibecode.md
.streamlit/: config.toml
app/: README.md  app.py  config.py  ml_runtime.py  plot_backgrounds.py
data/: README.md
ml/: __init__.py  clustering.py  embeddings.py  feedback.py  occupation_router.py  public_assessment.py  quality.py  resume_loader.py  retrieval.py  salary_features.py  salary_model.py  taxonomy.py  wage_bands.py
models/: cluster_assignments.npy  cluster_centroids.npy  cluster_labels.json  kmeans_k8.pkl  public_assessment_metrics.json  public_ats_fit_model.pt  public_domain_model.pt  public_entity_model.pt  public_section_model.pt  salary_model.pt  salary_model.scaler.json
notebooks/: 01_data_exploration.ipynb  02_embedding_experiments.ipynb  03_salary_regression.ipynb
scripts/: build_clusters.py  build_index.py  evaluate_retrieval.py  evaluate_salary.py  generate_synthetic_resumes.py  load_bls_oews.py  load_onet_skills.py  load_real_resumes.py  plot_graph.py  preprocess_data.py  train_public_assessment_models.py  train_quality_model.py  train_resume_salary_model.py  train_salary_model.py  validate_on_real_resumes.py
tests/: README.md  conftest.py  test_app_ml_runtime.py  test_clustering.py  test_embeddings.py  test_evaluate_retrieval.py  test_evaluate_salary.py  test_external_loaders.py  test_load_real_resumes.py  test_occupation_router.py  test_preprocess.py  (+13 more)
(+87 files in other folders)
