[project]
name = "resumatch"
version = "1.0.0"
description = "Resume matching, salary prediction, and job-market positioning for NYU CSCI-UA 473."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.8.0,<1.9",
    "numpy>=1.26.0,<2",
    "pandas>=2.2.0,<3",
    "pdfplumber>=0.11.0,<0.12",
    "plotly>=5.20.0,<6",
    "pyarrow>=15.0.0,<16",
    "scikit-learn>=1.4.0,<2",
    "sentence-transformers>=2.7.0,<3",
    "streamlit>=1.32.0,<2",
    "torch>=2.10.0,<2.11",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "pytest>=8.0.0,<9",
    "ruff>=0.8.0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "ml", "scripts", "tests"]
extend-exclude = [
    "notebooks",
    "data",
    "models",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"app/app.py" = ["E402", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
